cmd/policy-assistant/banp/banp.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: BaselineAdminNetworkPolicy
metadata:
  name: default
spec:
  subject:
    namespaces:
      matchLabels:
        kubernetes.io/metadata.name: network-policy-conformance-ravenclaw
  egress:
    - name: "allow-to-gryffindor-everything"
      action: "Allow"
      to:
        - namespaces:
            namespaceSelector:
              matchLabels:
                kubernetes.io/metadata.name: network-policy-conformance-gryffindor
    - name: "deny-to-gryffindor-everything"
      action: "Deny"
      to:
        - namespaces:
            namespaceSelector:
              matchLabels:
                kubernetes.io/metadata.name: network-policy-conformance-gryffindor
    - name: "deny-to-slytherin-at-port-9003"
      action: "Deny"
      to:
        - namespaces:
            namespaceSelector:
              matchLabels:
                kubernetes.io/metadata.name: network-policy-conformance-slytherin
      ports:
        - portNumber:
            protocol: SCTP
            port: 9003
    - name: "allow-to-hufflepuff-at-port-9003"
      action: "Allow"
      to:
        - namespaces:
            namespaceSelector:
              matchLabels:
                kubernetes.io/metadata.name: network-policy-conformance-hufflepuff
      ports:
        - portNumber:
            protocol: SCTP
            port: 9003
    - name: "deny-to-hufflepuff-everything-else"
      action: "Deny"
      to:
        - namespaces:
            namespaceSelector:
              matchLabels:
                kubernetes.io/metadata.name: network-policy-conformance-hufflepuff
